Add '-F' option which allows to delete existing empty directories, when creating symbolic links.

PR:		bin/92149
Submitted by:	Eugene Grosbein <eugen grosbein.pp.ru>